--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,16 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.2",
+    "canvas-confetti": "^1.9.2",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^10.16.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^4.12.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +45,11 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.12",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
+  }
 }
