--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-upload": "node src/test-upload.js"
+    "seed": "node src/utils/seedUser.js"
   },
   "keywords": [],
   "author": "",
