--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@liveblocks/client": "^2.20.0",
+    "@liveblocks/react": "^2.20.0",
+    "@liveblocks/react-tiptap": "^2.20.0",
+    "@liveblocks/react-ui": "^2.20.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "axios": "^1.8.2",
     "canvas-confetti": "^1.9.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^10.16.4",
+    "nanoid": "^5.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^4.12.0",
