--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@liveblocks/client": "^2.20.0",
     "@liveblocks/react": "^2.20.0",
     "@liveblocks/react-tiptap": "^2.20.0",
@@ -11,20 +14,31 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-placeholder": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "axios": "^1.8.2",
     "canvas-confetti": "^1.9.2",
     "date-fns": "^3.6.0",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
     "framer-motion": "^10.16.4",
+    "html2pdf.js": "^0.10.3",
+    "lodash": "^4.17.21",
     "nanoid": "^5.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
+    "slate": "^0.94.0",
+    "slate-dom": "^0.112.2",
+    "slate-react": "^0.94.0",
     "socket.io-client": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -53,7 +67,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/",
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.12",
     "autoprefixer": "^10.4.16",
