--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "dependencies": {
+    "@liveblocks/client": "^2.20.0",
+    "@liveblocks/react": "^2.20.0",
+    "@tiptap/extension-collaboration": "^2.11.5",
+    "@tiptap/extension-collaboration-cursor": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "canvas-confetti": "^1.9.3",
+    "konva": "^9.3.19",
+    "react-konva": "^19.0.3",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
